--- a/GameLibrary/Pages/_ViewImports.cshtml
+++ b/GameLibrary/Pages/_ViewImports.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using GameLibrary
+﻿@using GameLibrary
 @using GameLibrary.Data
 @namespace GameLibrary.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
