Adding MS Identity
Added:
* Login Partial
* Microsoft Identity package

--- a/GameLibrary/Pages/_ViewImports.cshtml
+++ b/GameLibrary/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using GameLibrary
+﻿@using Microsoft.AspNetCore.Identity
+@using GameLibrary
 @namespace GameLibrary.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
