--- a/GameLibrary/Pages/Account/Manage/_ManageNav.cshtml
+++ b/GameLibrary/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-@inject SignInManager<IdentityUser> SignInManager
+﻿@inject SignInManager<User> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
