--- a/GameLibrary/Pages/_ViewImports.cshtml
+++ b/GameLibrary/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using GameLibrary
+@using GameLibrary.Models
 @namespace GameLibrary.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
