--- a/GameLibrary/wwwroot/css/site.css
+++ b/GameLibrary/wwwroot/css/site.css
@@ -1,22 +1,36 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
+/* Site-wide styles */
 body {
-  margin-bottom: 60px;
+    background-color: #000235;
+    color: white;
+}
+
+h1 {
+    color: #FFD43B;
+    margin-top: 20px;
+    /* Adjust margin to move it down */
+}
+
+.navbar {
+    background-color: transparent;
+    /* Remove background box */
+}
+
+.nav-link {
+    color: #FFD43B;
+    /* Menu item font color */
+}
+
+footer {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    color: white;
+    /* Footer text color */
+}
+
+.btn {
+    background-color: #420599;
+    /* Button color */
+    color: #FFD43B;
+    /* Button text color */
 }
