--- a/GameLibrary/Pages/Games/Delete.cshtml
+++ b/GameLibrary/Pages/Games/Delete.cshtml
@@ -18,6 +18,13 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Game.Title)
         </dd>
+		<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Game.ImageUrl)
+		</dt>
+		<dd class="col-sm-10">
+			<img src="@Model.Game.ImageUrl" class="img-thumbnail" />
+			@Html.DisplayFor(model => model.Game.ImageUrl)
+		</dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Game.Genre)
         </dt>
