--- a/GameLibrary/Pages/Shared/_Layout.cshtml
+++ b/GameLibrary/Pages/Shared/_Layout.cshtml
@@ -24,9 +24,9 @@
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Index">Home</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Games/Index">Games</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Privacy">Privacy</a></li>
-
                     </ul>
-                    <partial name="_LoginPartial" />
+
+                    <partial name="_LoginPartial" /> <!-- <a href="#">Join us</a> Combine register and login to one page-->
                 </div>
             </div>
         </nav>
