--- a/GameLibrary/Pages/Shared/_Layout.cshtml
+++ b/GameLibrary/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,9 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Index">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Games/Index">Games</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Privacy">Privacy</a></li>
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
