--- a/GameLibrary/Pages/Games/Create.cshtml
+++ b/GameLibrary/Pages/Games/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
@@ -19,6 +19,24 @@
                 <input asp-for="Game!.Title" class="form-control" />
                 <span asp-validation-for="Game!.Title" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+            <label asp-for="ImageFile" class="control-label"></label>
+            <img id="imagePreview" src="ImageFile" class="img-thumbnail" title="Game Image" />
+            <input type="file" asp-for="ImageFile" class="form-control" onchange="previewImage(event)" />
+            <span asp-validation-for="ImageFile" class="text-danger"></span>
+            </div>
+
+            <script type="text/javascript">
+            function previewImage(event) {
+            var reader = new FileReader();
+            reader.onload = function(){
+            var output = document.getElementById('imagePreview');
+            output.src = reader.result;
+            };
+            reader.readAsDataURL(event.target.files[0]);
+            }
+            </script>
 
             <div class="form-group">
                 <label asp-for="Game!.Genre" class="control-label"></label>
