--- a/GameLibrary/Pages/Games/Details.cshtml
+++ b/GameLibrary/Pages/Games/Details.cshtml
@@ -9,8 +9,10 @@
 
 <div>
     <h4>Game</h4>
+
     <hr />
     <dl class="row">
+		<form method="post" enctype="multipart/form-data">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Game!.Title)
         </dt>
@@ -41,9 +43,14 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Game!.ImageUrl)
         </dd>
+		<dd class="col-sm-10">
+			<img src="@Model.Game!.ImageUrl" class="img-thumbnail" title="Game Image" />
+		</dd>
+		</form>
     </dl>
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Game!.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
+
