--- a/GameLibrary/Pages/Games/Edit.cshtml
+++ b/GameLibrary/Pages/Games/Edit.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Game!.Id" />
             <div class="form-group">
@@ -19,13 +19,35 @@
                 <input asp-for="Game!.Title" class="form-control" />
                 <span asp-validation-for="Game!.Title" class="text-danger"></span>
             </div>
+			<div class="form-group">
+				<label asp-for="Game.ImageUrl" class="control-label">Image</label>
+				<img src="@Model.Game.ImageUrl" class="img-thumbnail" title="Game Image" />
+				<span asp-validation-for="ImageFile" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="ImageFile" class="control-label">New Image</label>
+				<img id="imagePreview" src="ImageFile" class="img-thumbnail" title="Game Image" />
+				<input type="file" asp-for="ImageFile" class="form-control" onchange="previewImage(event)" />
+				<span asp-validation-for="ImageFile" class="text-danger"></span>
+			</div>
+			<script type="text/javascript">
+				function previewImage(event) {
+				var reader = new FileReader();
+				reader.onload = function(){
+				var output = document.getElementById('imagePreview');
+				output.src = reader.result;
+				};
+				reader.readAsDataURL(event.target.files[0]);
+				}
+			</script>
+
             <div class="form-group">
                 <label asp-for="Game!.Genre" class="control-label"></label>
                 <input asp-for="Game!.Genre" class="form-control" />
                 <span asp-validation-for="Game!.Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Game!.ReleaseDate" class="control-label"></label>
+				<label asp-for="Game!.ReleaseDate" class="control-label">Release Date</label>
                 <input asp-for="Game!.ReleaseDate" class="form-control" />
                 <span asp-validation-for="Game!.ReleaseDate" class="text-danger"></span>
             </div>
