Making it presentable

--- a/GameLibrary/Pages/About.cshtml
+++ b/GameLibrary/Pages/About.cshtml
@@ -1,7 +1,7 @@
 @page
 @model GameLibrary.Pages.AboutModel
 @{
-    ViewData["Title"] = "About Us";
+    ViewData["Title"] = "About";
 }
 <h1>@ViewData["Title"]</h1>
 
