--- a/GameLibrary/Pages/Shared/_Layout.cshtml
+++ b/GameLibrary/Pages/Shared/_Layout.cshtml
@@ -6,48 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - GameLibrary</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary border-bottom shadow">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary-subtle border-bottom shadow">
             <div class="container-fluid">
                 <a class="navbar-brand text-center text-break" asp-area="" asp-page="/Index">GameLibrary</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Index">Home</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Games/Index">Games</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/About">About</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-page="/Privacy">Privacy</a></li>
                     </ul>
 
-                    <partial name="_LoginPartial" /> <!-- <a href="#">Join us</a> Combine register and login to one page-->
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
     </header>
 
-    <main role="main" class="pb-3">
+    <main role="main" class="flex-grow-1 pb-3">
         <div class="container">
             @RenderBody()
         </div>
     </main>
 
-    <footer class="bg-body-tertiary text-center text-lg-start position-absolute bottom-0 w-100">
+    <footer class="bg-primary-subtle text-center text-lg-start mt-auto">
         <div class="container text-center p-3">
-            © 2024 Web-Tech Group 17 | This site uses cookies to enhance your experience. <a asp-area=""
-                asp-page="/Privacy" class="text-white">Learn more</a>
+            © 2024 Web-Tech Group 17 | This site uses cookies to enhance your experience. <a asp-area="" asp-page="/Privacy" class="text-white">Learn more</a>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
     <script src="https://unpkg.com/htmx.org@2.0.3"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
