--- a/GameLibrary/Pages/Admin/Games/Delete.cshtml
+++ b/GameLibrary/Pages/Admin/Games/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model GameLibrary.Pages.Games.DeleteModel
+@model GameLibrary.Pages.Admin.Games.DeleteModel
 
 @{
 	ViewData["Title"] = "Delete";
