--- a/GameLibrary/Pages/Admin/Games/Details.cshtml
+++ b/GameLibrary/Pages/Admin/Games/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model GameLibrary.Pages.Games.DetailsModel
+@model GameLibrary.Pages.Admin.Games.DetailsModel
 
 @{
 	ViewData["Title"] = "Details";
