--- a/GameLibrary/Pages/Admin/Games/Index.cshtml
+++ b/GameLibrary/Pages/Admin/Games/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model GameLibrary.Pages.Games.IndexModel
+@model GameLibrary.Pages.Admin.Games.IndexModel
 
 @{
 	ViewData["Title"] = "Admin Page";
