--- a/GameLibrary/Pages/Games/Index.cshtml
+++ b/GameLibrary/Pages/Games/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+@page
 @model GameLibrary.Pages.Games.IndexModel
 @{
     ViewData["Title"] = "Welcome to GAMELIB";
@@ -36,7 +36,13 @@
                         <p class="card-text">
                             @game.Description.Substring(0, Math.Min(100, @game.Description.Length))...
                         </p>
-                        <a href="/Games/Details?id=@game.Id" class="btn btn-primary">View Details</a>
+                    </div>
+                    <div class="card-footer">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a asp-page="/Games/Details" asp-route-id="@game.Id" class="btn btn-primary">View Details</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
