--- a/GameLibrary/Pages/Games/Reviews.cshtml
+++ b/GameLibrary/Pages/Games/Reviews.cshtml
@@ -1,4 +1,4 @@
 @page
 @model GameLibrary.Pages.Games.ReviewsModel
 
-<partial name="~/Pages/Games/Shared/_ReviewsList.cshtml" model="@Model.Reviews" />
+<partial name="_ReviewsList" model="@Model.Reviews" />
