--- a/GameLibrary/Pages/Shared/_LoginPartial.cshtml
+++ b/GameLibrary/Pages/Shared/_LoginPartial.cshtml
@@ -6,6 +6,9 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
+        <a class="nav-link" asp-area="" asp-page="/Account/Library">My Library</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" asp-area="" asp-page="/Account/Manage/Index" title="Manage">@User.Identity?.Name?.Split('@')[0]</a>
     </li>
     <li class="nav-item">
