--- a/GameLibrary/Pages/Admin/Games/Index.cshtml
+++ b/GameLibrary/Pages/Admin/Games/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
 	ViewData["Title"] = "Admin Page";
+    ViewData["ActivePage"] = ManageNavPages.Games;
 }
 
 <body style="background-color: #000235; color: #FFD43B;">
