--- a/GameLibrary/Pages/Admin/UserFavorites/Index.cshtml
+++ b/GameLibrary/Pages/Admin/UserFavorites/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "User Favorite Entries";
+    ViewData["ActivePage"] = ManageNavPages.UserFavorites;
 }
 
 <body style="color:#FFD43B;">
