--- a/GameLibrary/Pages/Admin/UserLibraries/Index.cshtml
+++ b/GameLibrary/Pages/Admin/UserLibraries/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "User Libraries";
+    ViewData["ActivePage"] = ManageNavPages.UserLibraries;
 }
 
 <body style="background-color: #000235; color: #FFD43B;">
