--- a/GameLibrary/Pages/Games/Index.cshtml
+++ b/GameLibrary/Pages/Games/Index.cshtml
@@ -1,7 +1,7 @@
 @page
 @model GameLibrary.Pages.Games.IndexModel
 @{
-    ViewData["Title"] = "Welcome to GAMELIB";
+    ViewData["Title"] = "Games";
 }
 <div class="container py-5">
     <!-- Search and Filters Section -->
