Prep for Tailwind
Fix
* Compile warnings

Moved
* css into files for eventual tailwind transformation

--- a/GameLibrary/Pages/Admin/Users/Index.cshtml
+++ b/GameLibrary/Pages/Admin/Users/Index.cshtml
@@ -24,7 +24,7 @@
                 </tr>
             </thead>
             <tbody style="color:#FFD43B;">
-                @foreach (var item in Model.Users!)
+                @foreach (var item in Model.IdentityUsers!)
                 {
                     <tr>
                         <td>@Html.DisplayFor(modelItem => item.UserName)</td>
