--- a/GameLibrary/Pages/Admin/Roles/Index.cshtml
+++ b/GameLibrary/Pages/Admin/Roles/Index.cshtml
@@ -20,7 +20,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var role in Model.Roles)
+        @foreach (var role in Model.Roles!)
         {
             <tr>
                 <td>@role.Name</td>
