--- a/GameLibrary/Pages/Admin/Users/Create.cshtml
+++ b/GameLibrary/Pages/Admin/Users/Create.cshtml
@@ -17,15 +17,15 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                 <div class="form-group">
-                    <label asp-for="User!.UserName" class="control-label">User Name</label>
-                    <input asp-for="User!.UserName" class="form-control" />
-                    <span asp-validation-for="User!.UserName" class="text-danger"></span>
+                    <label asp-for="IdentityUser!.UserName" class="control-label">User Name</label>
+                    <input asp-for="IdentityUser!.UserName" class="form-control" />
+                    <span asp-validation-for="IdentityUser!.UserName" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="User!.Email" class="control-label">Email</label>
-                    <input asp-for="User!.Email" class="form-control" />
-                    <span asp-validation-for="User!.Email" class="text-danger"></span>
+                    <label asp-for="IdentityUser!.Email" class="control-label">Email</label>
+                    <input asp-for="IdentityUser!.Email" class="form-control" />
+                    <span asp-validation-for="IdentityUser!.Email" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
